Finished styling footer.. fixed a bug where stack card was making the UI on mobile and tablet go haywire for some reason

--- a/src/components/Stack.module.css
+++ b/src/components/Stack.module.css
@@ -1,6 +1,7 @@
 .stack-container {
   position: relative;
   perspective: 600px;
+  overflow: hidden;
 }
 
 .card-rotate {
@@ -17,5 +18,4 @@
   pointer-events: none;
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
